fix: apply text align to footer for smaller screen

--- a/src/index.css
+++ b/src/index.css
@@ -614,6 +614,7 @@ nav > ul > li {
   color: var(--white);
   font-family: var(--inter);
   margin: 0;
+  text-align: center;
 }
 
 /* End of footer */
